--- a/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Module-13/Assignments/Decision Tree Assignment/DTree_Project_Assignment.ipynb
+++ b/Python-Libraries_and_OOPs/Ostad-PY-Libraries/Module-13/Assignments/Decision Tree Assignment/DTree_Project_Assignment.ipynb
@@ -31,13 +31,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BI-RADS</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Margin</th>\n",
+       "      <th>Density</th>\n",
+       "      <th>Target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>58</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   BI-RADS  Age  Shape  Margin  Density  Target\n",
+       "0        5   67      3       5        3       1\n",
+       "1        5   58      4       5        3       1\n",
+       "2        4   28      1       1        3       0\n",
+       "3        5   57      1       5        3       1\n",
+       "4        5   76      1       4        3       1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here please"
+    "df = pd.read_csv('mammographic_masses_data_clean.csv')\n",
+    "df.head(5)"
    ]
   },
   {
@@ -151,13 +245,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 830 entries, 0 to 829\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column   Non-Null Count  Dtype\n",
+      "---  ------   --------------  -----\n",
+      " 0   BI-RADS  830 non-null    int64\n",
+      " 1   Age      830 non-null    int64\n",
+      " 2   Shape    830 non-null    int64\n",
+      " 3   Margin   830 non-null    int64\n",
+      " 4   Density  830 non-null    int64\n",
+      " 5   Target   830 non-null    int64\n",
+      "dtypes: int64(6)\n",
+      "memory usage: 39.0 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here please"
+    "df.info()"
    ]
   },
   {
@@ -194,13 +308,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Target\n",
+       "0    427\n",
+       "1    403\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here please"
+    "df['Target'].value_counts()"
    ]
   },
   {
@@ -236,9 +364,132 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BI-RADS</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Margin</th>\n",
+       "      <th>Density</th>\n",
+       "      <th>Target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>830.000000</td>\n",
+       "      <td>830.000000</td>\n",
+       "      <td>830.000000</td>\n",
+       "      <td>830.000000</td>\n",
+       "      <td>830.000000</td>\n",
+       "      <td>830.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.393976</td>\n",
+       "      <td>55.781928</td>\n",
+       "      <td>2.781928</td>\n",
+       "      <td>2.813253</td>\n",
+       "      <td>2.915663</td>\n",
+       "      <td>0.485542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.888371</td>\n",
+       "      <td>14.671782</td>\n",
+       "      <td>1.242361</td>\n",
+       "      <td>1.567175</td>\n",
+       "      <td>0.350936</td>\n",
+       "      <td>0.500092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>57.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          BI-RADS         Age       Shape      Margin     Density      Target\n",
+       "count  830.000000  830.000000  830.000000  830.000000  830.000000  830.000000\n",
+       "mean     4.393976   55.781928    2.781928    2.813253    2.915663    0.485542\n",
+       "std      1.888371   14.671782    1.242361    1.567175    0.350936    0.500092\n",
+       "min      0.000000   18.000000    1.000000    1.000000    1.000000    0.000000\n",
+       "25%      4.000000   46.000000    2.000000    1.000000    3.000000    0.000000\n",
+       "50%      4.000000   57.000000    3.000000    3.000000    3.000000    0.000000\n",
+       "75%      5.000000   66.000000    4.000000    4.000000    3.000000    1.000000\n",
+       "max     55.000000   96.000000    4.000000    5.000000    4.000000    1.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here please"
+    "df.describe()"
    ]
   },
   {
@@ -380,45 +631,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Code here please"
+    "X = df.drop('Target', axis=1)\n",
+    "y = df.Target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Code here please"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Code here please"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BI-RADS</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Shape</th>\n",
+       "      <th>Margin</th>\n",
+       "      <th>Density</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>212</th>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411</th>\n",
+       "      <td>5</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>357</th>\n",
+       "      <td>4</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>4</td>\n",
+       "      <td>27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>709</th>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439</th>\n",
+       "      <td>4</td>\n",
+       "      <td>71</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>4</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>581 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BI-RADS  Age  Shape  Margin  Density\n",
+       "212        4   43      3       1        2\n",
+       "8          4   54      1       1        3\n",
+       "411        5   55      4       5        3\n",
+       "357        4   35      2       1        3\n",
+       "268        4   27      3       1        3\n",
+       "..       ...  ...    ...     ...      ...\n",
+       "360        0   69      4       5        3\n",
+       "709        4   41      2       2        3\n",
+       "439        4   71      4       4        3\n",
+       "174        4   43      2       1        3\n",
+       "122        4   34      1       1        3\n",
+       "\n",
+       "[581 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,13 +830,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Code here please"
+    "from sklearn.tree import DecisionTreeClassifier\n"
    ]
   },
   {
@@ -461,13 +859,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Code here please"
+    "dect = DecisionTreeClassifier()\n",
+    "dectModel = dect.fit(X_train, y_train)"
    ]
   },
   {
@@ -503,13 +902,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7710843373493976"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here please"
+    "dectModel.score(X_test, y_test)"
    ]
   }
  ],
