--- a/CSE445/Class-Task/CSV_to_JSON/main.ipynb
+++ b/CSE445/Class-Task/CSV_to_JSON/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -363,43 +363,168 @@
        "18         5.83  7.42  3.27  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('gas_prices.csv')\n",
+    "df = pd.read_csv('gas_prices.csv', sep=',')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# location = r'f:Downloads/My_Project/Data-Science'\n",
+    "# output = df.to_json('hello.json', orient='records', lines=True)\n",
+    "output = df.to_json('hello.json', orient='records', lines=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = df.to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Australia</th>\n",
+       "      <th>Canada</th>\n",
+       "      <th>France</th>\n",
+       "      <th>Germany</th>\n",
+       "      <th>Italy</th>\n",
+       "      <th>Japan</th>\n",
+       "      <th>Mexico</th>\n",
+       "      <th>South Korea</th>\n",
+       "      <th>UK</th>\n",
+       "      <th>USA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>4.59</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>3.46</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>2.49</td>\n",
+       "      <td>3.01</td>\n",
+       "      <td>1.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>1.89</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>4.53</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>1.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>3.41</td>\n",
+       "      <td>3.07</td>\n",
+       "      <td>3.68</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>1.11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'{\"Year\":{\"0\":1990,\"1\":1991,\"2\":1992,\"3\":1993,\"4\":1994,\"5\":1995,\"6\":1996,\"7\":1997,\"8\":1998,\"9\":1999,\"10\":2000,\"11\":2001,\"12\":2002,\"13\":2003,\"14\":2004,\"15\":2005,\"16\":2006,\"17\":2007,\"18\":2008},\"Australia\":{\"0\":null,\"1\":1.96,\"2\":1.89,\"3\":1.73,\"4\":1.84,\"5\":1.95,\"6\":2.12,\"7\":2.05,\"8\":1.63,\"9\":1.72,\"10\":1.94,\"11\":1.71,\"12\":1.76,\"13\":2.19,\"14\":2.72,\"15\":3.23,\"16\":3.54,\"17\":3.85,\"18\":4.45},\"Canada\":{\"0\":1.87,\"1\":1.92,\"2\":1.73,\"3\":1.57,\"4\":1.45,\"5\":1.53,\"6\":1.61,\"7\":1.62,\"8\":1.38,\"9\":1.52,\"10\":1.86,\"11\":1.72,\"12\":1.69,\"13\":1.99,\"14\":2.37,\"15\":2.89,\"16\":3.26,\"17\":3.59,\"18\":4.08},\"France\":{\"0\":3.63,\"1\":3.45,\"2\":3.56,\"3\":3.41,\"4\":3.59,\"5\":4.26,\"6\":4.41,\"7\":4.0,\"8\":3.87,\"9\":3.85,\"10\":3.8,\"11\":3.51,\"12\":3.62,\"13\":4.35,\"14\":4.99,\"15\":5.46,\"16\":5.88,\"17\":6.6,\"18\":7.51},\"Germany\":{\"0\":2.65,\"1\":2.9,\"2\":3.27,\"3\":3.07,\"4\":3.52,\"5\":3.96,\"6\":3.94,\"7\":3.53,\"8\":3.34,\"9\":3.42,\"10\":3.45,\"11\":3.4,\"12\":3.67,\"13\":4.59,\"14\":5.24,\"15\":5.66,\"16\":6.03,\"17\":6.88,\"18\":7.75},\"Italy\":{\"0\":4.59,\"1\":4.5,\"2\":4.53,\"3\":3.68,\"4\":3.7,\"5\":4.0,\"6\":4.39,\"7\":4.07,\"8\":3.84,\"9\":3.87,\"10\":3.77,\"11\":3.57,\"12\":3.74,\"13\":4.53,\"14\":5.29,\"15\":5.74,\"16\":6.1,\"17\":6.73,\"18\":7.63},\"Japan\":{\"0\":3.16,\"1\":3.46,\"2\":3.58,\"3\":4.16,\"4\":4.36,\"5\":4.43,\"6\":3.64,\"7\":3.26,\"8\":2.82,\"9\":3.27,\"10\":3.65,\"11\":3.27,\"12\":3.15,\"13\":3.47,\"14\":3.93,\"15\":4.28,\"16\":4.47,\"17\":4.49,\"18\":5.74},\"Mexico\":{\"0\":1.0,\"1\":1.3,\"2\":1.5,\"3\":1.56,\"4\":1.48,\"5\":1.11,\"6\":1.25,\"7\":1.47,\"8\":1.49,\"9\":1.79,\"10\":2.01,\"11\":2.2,\"12\":2.24,\"13\":2.04,\"14\":2.03,\"15\":2.22,\"16\":2.31,\"17\":2.4,\"18\":2.45},\"South Korea\":{\"0\":2.05,\"1\":2.49,\"2\":2.65,\"3\":2.88,\"4\":2.87,\"5\":2.94,\"6\":3.18,\"7\":3.34,\"8\":3.04,\"9\":3.8,\"10\":4.18,\"11\":3.76,\"12\":3.84,\"13\":4.11,\"14\":4.51,\"15\":5.28,\"16\":5.92,\"17\":6.21,\"18\":5.83},\"UK\":{\"0\":2.82,\"1\":3.01,\"2\":3.06,\"3\":2.84,\"4\":2.99,\"5\":3.21,\"6\":3.34,\"7\":3.83,\"8\":4.06,\"9\":4.29,\"10\":4.58,\"11\":4.13,\"12\":4.16,\"13\":4.7,\"14\":5.56,\"15\":5.97,\"16\":6.36,\"17\":7.13,\"18\":7.42},\"USA\":{\"0\":1.16,\"1\":1.14,\"2\":1.13,\"3\":1.11,\"4\":1.11,\"5\":1.15,\"6\":1.23,\"7\":1.23,\"8\":1.06,\"9\":1.17,\"10\":1.51,\"11\":1.46,\"12\":1.36,\"13\":1.59,\"14\":1.88,\"15\":2.3,\"16\":2.59,\"17\":2.8,\"18\":3.27}}'"
+       "   Year  Australia  Canada  France  Germany  Italy  Japan  Mexico  \\\n",
+       "0  1990        NaN    1.87    3.63     2.65   4.59   3.16    1.00   \n",
+       "1  1991       1.96    1.92    3.45     2.90   4.50   3.46    1.30   \n",
+       "2  1992       1.89    1.73    3.56     3.27   4.53   3.58    1.50   \n",
+       "3  1993       1.73    1.57    3.41     3.07   3.68   4.16    1.56   \n",
+       "\n",
+       "   South Korea    UK   USA  \n",
+       "0         2.05  2.82  1.16  \n",
+       "1         2.49  3.01  1.14  \n",
+       "2         2.65  3.06  1.13  \n",
+       "3         2.88  2.84  1.11  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output"
+    "df_from_json = pd.read_json('hello.json', orient='records', lines=True)\n",
+    "df_from_json.to_csv('hello.csv', index=False)\n",
+    "dff = pd.read_csv('hello.csv')\n",
+    "dff.head(4)"
    ]
   },
   {
